# fastic-readout-fw

./: .gitmodules  CMakeLists.txt  STM32H753.svd  STM32H753VITx_FLASH.ld  STM32H753ZITX_FLASH.ld
cmake/: stm32H7.cmake  toolchain-arm-none-eabi.cmake
inc/: Si5340_config.h  ad9510.hpp  bdma.hpp  clock.hpp  dma.hpp  dmamux.hpp  fastic.hpp  gpio.hpp  i2c.hpp  pid.hpp  register.hpp  si5340.hpp  spi.hpp  status.hpp  stmcpp-config.hpp  timer.hpp  tusb_config.h  usb.hpp
lib/aurora/inc/: aurora.hpp
lib/aurora/src/: aurora.cpp
src/: ad9510.cpp  clock.cpp  commuication.cpp  fastic.cpp  i2c.cpp  main.cpp  si5340.cpp  spi.cpp  status.cpp  timer.cpp  usb.cpp  usb_descriptors.c
startup/: startup_stm32h743zitx.s
